--- a/07.Neutron.md
+++ b/07.Neutron.md
@@ -190,8 +190,26 @@ link-local      0.0.0.0         255.255.0.0     U     0      0        0 ns-aa407
 
 ```
 
+## 3.2. Kiến trúc neutron
 
-## 3.2. Neutron Agent
+<img src="https://github.com/lean15998/Openstack/blob/main/images/07.04.png">
+
+Openstack Neutron là một dịch vụ độc lập mà triển khai một số tiến trình trên một số lượng các node. Các tiến trình này tương tác với nhau và với các dịch vụ Openstack khác. Tiến trình chính của Neutron là neutron-server, một daemon Python expose Openstack Networking API và truyền yêu cầu của người dùng đến một plug-ins phù hợp để xử lý sau đó.
+
+Các thành phần của Openstack networking:
+
+**neutron-server (neutron-server and neutron-*-plugin)**: Dịch vụ này chạy trên network node để cung cấp Networking API và phần mở rộng của nó. Nó cũng thực thi mô hình mạng và địa chỉ ip trên từng port. Dịch vụ neutron-server yêu cầu truy cập gián tiếp đến database thông qua các plugin - mà giao tiếp với database sử dụng AMQP.
+
+**plugin agent(neutron-*-agent)**: chạy trên mỗi compute node để quản lý cấu hình của switch ảo trên đó. Plug-in sẽ được dùng để xác định agent nào đang chạy. Dịch vụ này yêu cầu truy cập message queue và các yêu cầu khác phụ thuộc vào plug-in nào được sử dụng.
+
+**DHCP-Agent(neutron-l3-agent)**: Cung cấp dịch vụ DHCP cho mạng của khách hàng. Trên mọi plug-ins thì agent này đều có nhiệm vụ giống nhau là quản lý cấu hình DHCP. DHCP agent yêu cầu truy cập message queue và các yêu cầu khác tùy vào plug-in.
+
+**L3 agent(neutron-l3-agent)**: Cung cấp các cấu hình mạng ở layer 3/Nat forwarding để mạng ngoài truy cập, giao tiếp với mạng khách hàng. L3 agent yêu cầu truy cập message queue và các yêu cầu khác tùy vào plug-in.
+
+**network provider service(SDN server/services)**: Cung cấp thêm dịch vụ cho networking. Dịch vụ SDN có thể giao tiếp với *neutron-server*, *neutron-plugin* và *neutron-agent* thông qua các kênh giao tiếp như REST-API.
+
+
+## 3.3. Neutron Agent
 
 - Một agent trong neutron đảm nhiệm các nhiệm vụ khác nhau để tác động tới các mạng ảo . Trong neutron gồm các agent cơ bản sau : neutron-dhcp-agent, neutron-l3-agent, neutron-metering-agent, and neutron-lbaas-agent,
 - Các agent cơ bản khi khi triển khai ` self-service network`
@@ -208,7 +226,7 @@ link-local      0.0.0.0         255.255.0.0     U     0      0        0 ns-aa407
 +--------------------------------------+--------------------+------------+-------------------+-------+-------+---------------------------+
 ``` 
 
-### 3.2.1 : ML2 plugin , agent 
+### 3.3.1 : ML2 plugin , agent 
 
 - Modular Layer 2 (ml2) cung cấp một framework cho phép neutron tương tác với các hạ tầng Layer 2 hiện đang có trong các DC. Ml2 framework gồm có 2 driver riêng biệt
 	- Type driver : giúp neutron xác đinh được công nghệ sử dụng : Ví dụ như VLAN . Với mỗi kiểu network được quản lý bởi ML2 Type Driver , xác định trạng thái mạng cụ thể và chịu trách nhiệm cho các segment layer 2
@@ -218,23 +236,21 @@ link-local      0.0.0.0         255.255.0.0     U     0      0        0 ns-aa407
 	
 - L2 agent serves phục vụ khả năng làm việc với Layer 2. Thường năm trên Network Node và trên mỗi Compute Node 
 
-### 3.2.2 : L3 Agent 
+### 3.3.2 : L3 Agent 
 - Cung cấp khả năng làm việc với các dịch vụ Layer 3 :  virtual Routers và Floating IP
 
 - Yêu cầu có sẵn một L2 Agent 
 
 
-### 3.2.3. DHCP agent
+### 3.3.3. DHCP agent
 
 - Đảm nhiệm nhiệm vụ DHCP . 
 - Yêu cầu có sẵn một L2 Agent 
 
-### 3.2.4. Meta Data agent
+### 3.3.4. Meta Data agent
 
 - Cung cấp khả gửi các cloud init data tới các instance thông tin network
 -  Yêu cầu có sẵn một L2 Agent
-
-  <img src="https://github.com/lean15998/Openstack/blob/main/images/07.04.png">
 
 # 4. Neutron Traffic Flow trong Linux Bridge
 
