--- a/07.Neutron.md
+++ b/07.Neutron.md
@@ -1104,6 +1104,29 @@ root@quynv:~# openstack security group rule create --protocol tcp --dst-port 22:
 +-------------------+--------------------------------------+
 ```
 
+- Áp dụng security group vừa khởi tạo vào instance
+
+```sh
+root@quynv:~# openstack server list
++--------------------------------------+------+---------+-------------------+--------------------------+-----------+
+| ID                                   | Name | Status  | Networks          | Image                    | Flavor    |
++--------------------------------------+------+---------+-------------------+--------------------------+-----------+
+| e483c6a8-49d2-4f6c-99a2-f816df719e8d | vm1  | SHUTOFF | public=10.0.0.248 | N/A (booted from volume) | cirros256 |
++--------------------------------------+------+---------+-------------------+--------------------------+-----------+
+root@quynv:~# openstack port list
++--------------------------------------+------+-------------------+------------------------------------------------------------------------------+--------+
+| ID                                   | Name | MAC Address       | Fixed IP Addresses                                                           | Status |
++--------------------------------------+------+-------------------+------------------------------------------------------------------------------+--------+
+| 0b41d65a-dc3f-42e2-a61f-777af1337887 |      | fa:16:3e:3e:b7:ce | ip_address='10.0.0.220', subnet_id='4f4da1ba-5bea-4328-9fb4-bf2148850126'    | DOWN   |
+| 5f7d50ef-c346-4b12-a869-6a1270fe5085 |      | fa:16:3e:4b:8e:c4 | ip_address='192.168.100.2', subnet_id='0b71004f-fd12-4dd6-8eb3-a000c271db2a' | ACTIVE |
+| 67bc1afb-321c-4f16-808c-08efde34ccac |      | fa:16:3e:bc:09:3c | ip_address='10.0.0.248', subnet_id='4f4da1ba-5bea-4328-9fb4-bf2148850126'    | DOWN   |
+| e1065648-378c-4fcc-af59-ee2c6610545a |      | fa:16:3e:62:2a:19 | ip_address='10.0.0.209', subnet_id='4f4da1ba-5bea-4328-9fb4-bf2148850126'    | N/A    |
+| e77905ff-c7ca-4e69-af52-c44bc8c117b2 |      | fa:16:3e:60:71:90 | ip_address='192.168.100.1', subnet_id='0b71004f-fd12-4dd6-8eb3-a000c271db2a' | DOWN   |
+| ec7d0800-211f-47f3-9311-41152d61165d |      | fa:16:3e:8b:a0:4f | ip_address='10.0.0.200', subnet_id='4f4da1ba-5bea-4328-9fb4-bf2148850126'    | ACTIVE |
++--------------------------------------+------+-------------------+------------------------------------------------------------------------------+--------+
+root@quynv:~# openstack port set --security-group secgroup01 67bc1afb-321c-4f16-808c-08efde34ccac
+```
+
 - Xem danh sách các rule
 
 ```sh
