--- a/09.Ceph-Openstack.md
+++ b/09.Ceph-Openstack.md
@@ -29,8 +29,12 @@ root@quynv:~# glance image-create --name "cirros" \
 | virtual_size     | 46137344                                                                         |
 | visibility       | public                                                                           |
 +------------------+----------------------------------------------------------------------------------+
-root@quynv:~# rbd -p images ls
-ad365e84-752d-489a-b355-74a154b3691b
+
+root@quynv:~# rbd -p images ls -l
+NAME                                       SIZE     PARENT  FMT  PROT  LOCK
+ad365e84-752d-489a-b355-74a154b3691b        12 MiB            2
+b597ed5e-4f96-4295-9434-c6b69a634516@snap  1.2 GiB            2  yes
+
 ```
 
 # 2.Cấu hình CEPH làm backend cho Cinder-Volume và Cinder-backup
@@ -60,7 +64,9 @@ root@quynv:~# openstack volume create --size 1 testceph
 | updated_at          | None                                 |
 | user_id             | 7bc4d6264fd84f0cb9bf7f8ce25388e4     |
 +---------------------+--------------------------------------+
-root@quynv:~# rbd -p volumes ls
-volume-0f692716-fd1c-4da7-a6a9-bcd6e2511d76
+root@quynv:~# rbd -p volumes ls -l
+NAME                                         SIZE   PARENT  FMT  PROT  LOCK
+volume-0f692716-fd1c-4da7-a6a9-bcd6e2511d76  1 GiB            2
+
 ```
 # 3.Cấu hình CEPH làm backend cho Nova-Compute
