--- a/09.Ceph-Openstack.md
+++ b/09.Ceph-Openstack.md
@@ -37,7 +37,7 @@ b597ed5e-4f96-4295-9434-c6b69a634516@snap  1.2 GiB            2  yes
 
 ```
 
-# 2.Cấu hình CEPH làm backend cho Cinder-Volume và Cinder-backup
+# 2.Cấu hình CEPH làm backend cho Cinder
 ```sh
 root@quynv:~# openstack volume create --size 1 testceph
 +---------------------+--------------------------------------+
