--- a/09.Ceph-Openstack.md
+++ b/09.Ceph-Openstack.md
@@ -1,4 +1,4 @@
-# 1.Cấu hình CEPH làm backend cho Glance-Images
+# 1.Cấu hình CEPH làm backend cho Glance  
 
 ```sh
 root@quynv:~# glance image-create --name "cirros" \
@@ -69,4 +69,4 @@ NAME                                         SIZE   PARENT  FMT  PROT  LOCK
 volume-0f692716-fd1c-4da7-a6a9-bcd6e2511d76  1 GiB            2
 
 ```
-# 3.Cấu hình CEPH làm backend cho Nova-Compute
+# 3.Cấu hình CEPH làm backend cho Nova
