--- a/09.Ceph-Openstack.md
+++ b/09.Ceph-Openstack.md
@@ -1,4 +1,77 @@
-# 1.Cấu hình CEPH làm backend cho Glance  
+# Openstack tích hợp CEPH
+
+## Mô hình triển khai
+```sh
+                                                         | eth0
+                            +----------------------------+----------------------------+
+                            |                            |                            |
+                            |10.0.0.51                   |10.0.0.52                   |10.0.0.53 
+                +-----------+-----------+    +-----------+-----------+    +-----------+-----------+
+                |        [node01]       |    |        [node02]       |    |        [node03]       |
+                |     Object Storage    +----+     Object Storage    +----+     Object Storage    |
+                |     Monitor Daemon    |    |                       |    |                       |
+                |     Manager Daemon    |    |                       |    |                       |    
+                |     Openstack AIO     |    |                       |    |                       |    
+                |                       |    |                       |    |                       |
+                +-----------+-----------+    +-----------------------+    +-----------------------+
+                        eth1|
+```
+Đối với OpenStack có 3 thành phần có thể kết nối được với Ceph. 
+
+- Images: OpenStack Glance quản lý các image cho các VM, lưu trữ các images dưới dạng nhị phân. 
+- Volumes: Các Block Devices được sử dụng để boot các VM hoặc là các ổ đĩa đính kèm thêm cho VM.
+- Guest Disk: Mặc định khi tạo VM từ images thì disk của nó được lưu trữ dưới dạng filesystems. 
+
+
+## 1.Tạo pool trên CEPH
+
+```sh
+root@quynv:~# ceph osd pool create volumes 32 32
+root@quynv:~# ceph osd pool create vms 32 32
+root@quynv:~# ceph osd pool create images 32 32
+```
+
+- Khởi tạo trước khi sử dụng pool
+
+```sh
+root@quynv:~# rbd pool init volumes
+root@quynv:~# rbd pool init vms
+root@quynv:~# rbd pool init images
+root@quynv:~# rbd pool init backups
+```
+## 2.Cấu hình CEPH làm backend cho Glance  
+
+- Tạo key glance
+
+```sh
+root@quynv:~# ceph auth get-or-create client.glance mon 'allow r' osd 'allow class-read object_prefix rbd_children, allow rwx pool=images' > ceph.client.glance.keyring
+root@quynv:~# ceph auth get-or-create client.glance | tee /etc/ceph/ceph.client.glance.keyring
+```
+
+- Set quyền cho key
+
+```sh
+root@quynv:~# chown glance:glance /etc/ceph/ceph.client.glance.keyring
+root@quynv:~# chmod 0640 /etc/ceph/ceph.client.glance.keyring
+```
+- Thêm cấu hình file /etc/glance/glance-api.conf
+
+```sh
+[glance_store]
+default_store = rbd
+stores = file,http,rbd
+rbd_store_pool = images
+rbd_store_user = glance
+rbd_store_ceph_conf = /etc/ceph/ceph.conf
+rbd_store_chunk_size = 8
+```
+- Restart dịch vụ glance
+
+```sh
+systemctl restart glance-*
+```
+
+- Tạo images và kiểm tra lưu trữ trên CEPH
 
 ```sh
 root@quynv:~# glance image-create --name "cirros" \
@@ -38,6 +111,82 @@ b597ed5e-4f96-4295-9434-c6b69a634516@snap  1.2 GiB            2  yes
 ```
 
 # 2.Cấu hình CEPH làm backend cho Cinder
+
+- Tạo và di chuyển key cinder
+
+```sh
+root@quynv:~# ceph auth get-or-create client.cinder mon 'allow r, allow command "osd blacklist", allow command "blacklistop"' osd 'allow class-read object_prefix rbd_children, allow rwx pool=volumes, allow rwx pool=images' > ceph.client.cinder.keyring
+root@quynv:~# ceph auth get-or-create client.cinder | tee /etc/ceph/ceph.client.cinder.keyring
+root@quynv:~# ceph auth get-key client.cinder | tee /root/client.cinder
+```
+
+- Set quyền cho key
+
+```sh
+root@quynv:~# chown cinder:cinder /etc/ceph/ceph.client.cinder*
+root@quynv:~# chmod 0640 /etc/ceph/ceph.client.cinder*
+```
+
+- Khởi tạo 1 uuid mới cho Cinder
+```sh
+root@quynv:~# uuidgen
+f81d4a93-3f0a-41d7-bccc-ec48c55df319
+```
+
+- Tạo file xml cho phép Ceph RBD (Rados Block Device) xác thực với libvirt thông qua uuid vừa tạo
+```sh
+root@quynv:~# cat > ceph.xml <<EOF
+<secret ephemeral='no' private='no'>
+<uuid>f81d4a93-3f0a-41d7-bccc-ec48c55df319</uuid>
+<usage type='ceph'>
+	<name>client.cinder secret</name>
+        <name>client.nova secret</name>
+</usage>
+</secret>
+EOF
+root@quynv:~# virsh secret-define --file ceph.xml
+Secret f81d4a93-3f0a-41d7-bccc-ec48c55df319 created
+```
+- Gán giá trị của client.cinder cho uuid
+
+```sh
+root@quynv:~# virsh secret-set-value --secret f81d4a93-3f0a-41d7-bccc-ec48c55df319 --base64 $(cat /root/client.cinder)
+Secret value set
+```
+- Thêm cấu hinh /etc/cinder/cinder.conf
+
+```sh
+[DEFAULT]
+...
+enabled_backends = ceph
+glance_api_version = 2
+
+[ceph]
+volume_driver = cinder.volume.drivers.rbd.RBDDriver
+volume_backend_name = ceph
+rbd_pool = volumes
+rbd_ceph_conf = /etc/ceph/ceph.conf
+rbd_flatten_volume_from_snapshot = false
+rbd_max_clone_depth = 5
+rbd_store_chunk_size = 4
+rados_connect_timeout = -1
+rbd_user = cinder
+rbd_secret_uuid = f81d4a93-3f0a-41d7-bccc-ec48c55df319
+```
+
+- Restart dịch vụ cinder
+
+```sh
+root@quynv:~# systemctl restart cinder-api cinder-volume cinder-scheduler
+```
+- Tạo volume type
+```sh
+root@quynv:~#root@quynv:~# cinder type-create ceph
+root@quynv:~# cinder type-key ceph set volume_backend_name=ceph
+```
+- Khởi tạo volume và kiểm tra trên CEPH
+
+
 ```sh
 root@quynv:~# openstack volume create --size 1 testceph
 +---------------------+--------------------------------------+
@@ -71,6 +220,44 @@ volume-0f692716-fd1c-4da7-a6a9-bcd6e2511d76  1 GiB            2
 ```
 # 3.Cấu hình CEPH làm backend cho Nova
 
+- Tạo và di chuyển keyring cho nova
+```sh
+root@quynv:~# ceph auth get-or-create client.nova mon 'allow r' osd 'allow class-read object_prefix rbd_children, allow rwx pool=vms, allow rx pool=images' -o /etc/ceph/ceph.client.nova.keyring 
+root@quynv:~# ceph auth get-or-create client.nova | tee /etc/ceph/ceph.client.nova.keyring 
+root@quynv:~# ceph auth get-key client.nova | tee /root/client.nova
+```
+
+- Set quyền
+
+```sh
+root@quynv:~# chgrp nova /etc/ceph/ceph.client.nova.keyring
+root@quynv:~# chmod 0640 /etc/ceph/ceph.client.nova.keyring
+```
+- Gán giá trị của client.nova cho uuid tạo ở trước đó.
+
+```sh
+root@quynv:~# virsh secret-set-value --secret f81d4a93-3f0a-41d7-bccc-ec48c55df319 --base64 $(cat /root/client.nova)
+Secret value set
+```
+
+- Thêm cấu hình libvirt trên /etc/nova/nova.conf
+
+```sh
+[libvirt]
+images_rbd_pool=vms
+images_type=rbd
+rbd_secret_uuid=f81d4a93-3f0a-41d7-bccc-ec48c55df319
+rbd_user=nova
+images_rbd_ceph_conf = /etc/ceph/ceph.conf
+```
+
+- Restart nova-compute
+
+```sh
+root@quynv:~# systemctl restart nova-compute
+```
+
+- Boot VM và kiểm tra trên CEPH
 ```sh
 root@quynv:~# nova boot --flavor cirros256 --image 396f64b1-4672-481b-bc32-16a8c4c3d962 --security-groups default --nic net-name=public node02
 +--------------------------------------+-----------------------------------------------+
