--- a/09.Ceph-Openstack.md
+++ b/09.Ceph-Openstack.md
@@ -110,7 +110,7 @@ b597ed5e-4f96-4295-9434-c6b69a634516@snap  1.2 GiB            2  yes
 
 ```
 
-# 2.Cấu hình CEPH làm backend cho Cinder
+## 3.Cấu hình CEPH làm backend cho Cinder
 
 - Tạo và di chuyển key cinder
 
@@ -218,7 +218,7 @@ NAME                                         SIZE   PARENT  FMT  PROT  LOCK
 volume-0f692716-fd1c-4da7-a6a9-bcd6e2511d76  1 GiB            2
 
 ```
-# 3.Cấu hình CEPH làm backend cho Nova
+## 4.Cấu hình CEPH làm backend cho Nova
 
 - Tạo và di chuyển keyring cho nova
 ```sh
